Add qualifier so it doesn't interfere with community project

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   </parent>
 
   <artifactId>license-maven-plugin</artifactId>
-  <version>1.17-SNAPSHOT</version>
+  <version>1.16.0.redhat-00001</version>
   <packaging>maven-plugin</packaging>
 
   <name>License Maven Plugin</name>
